[PREM-47] Add "Incoming" "Outgoing" filter in user's transactions in user management